# multi-modal-fake-news-detection

./: .gitignore  LICENSE  README.md  pyproject.toml
configs/: default.yaml  smoke.yaml
scripts/: prepare_fakeddit_subset.py
src/mmfnd/: config.py  train_utils.py
src/mmfnd.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/mmfnd/cli/: build_indices.py  evaluate.py  fill_evidence.py  predict.py  train.py
src/mmfnd/common/: device.py  logging.py  metrics.py  registry.py  seed.py  serialization.py
src/mmfnd/datasets/: image_transforms.py  loaders.py  schemas.py  splits.py  text_clean.py
src/mmfnd/evidence/: cache.py  pipeline.py
src/mmfnd/evidence/coref/: resolve.py
src/mmfnd/evidence/dpr/: index.py  retrieve.py
src/mmfnd/evidence/reverse_image/: index.py
src/mmfnd/evidence/verifier/: prompt_templates.py  t5_entailment.py
src/mmfnd/models/: model.py
src/mmfnd/models/adversary/: event_discriminator.py  gradient_reversal.py
src/mmfnd/models/fusion/: hierarchical_attention.py
src/mmfnd/models/heads/: classifier.py
src/mmfnd/models/text/: bert.py
src/mmfnd/models/vision/: resnet50.py
src/mmfnd/scoring/: cmc.py  cmpu.py  pts.py  triage.py
src/mmfnd/trust/: domain_stats.py  dtf.py
