[project]
name = "mmfnd"
version = "0.1.0"
description = "Multimodal Fake News Detection baseline with evidence + trust + triage"
requires-python = ">=3.10"
dependencies = [
  "torch>=2.1",
  "torchvision>=0.16",
  "transformers>=4.40",
  "datasets>=2.18",
  "numpy>=1.24",
  "pandas>=2.0",
  "pyyaml>=6.0",
  "tqdm>=4.66",
  "scikit-learn>=1.3",
  "rich>=13.7",
  "pillow>=10.0",
  "scipy>=1.10",
]

[project.scripts]
mmfnd-train = "mmfnd.cli.train:main"
mmfnd-eval = "mmfnd.cli.evaluate:main"
mmfnd-predict = "mmfnd.cli.predict:main"
mmfnd-build-indices = "mmfnd.cli.build_indices:main"
mmfnd-fill-evidence = "mmfnd.cli.fill_evidence:main"


[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
